@@ -108,7 +108,7 @@ class Tester:
                  mos file plots `a.x` versus `a.y` and `b.x` versus `(b.y1, b.y2)`.
         '''
         self.__data = []
-        self.__reporter = rep.Reporter()
+        self.__reporter = rep.Reporter("unitTests.log")
 
     def useExistingResults(self, dirs):
         ''' This function allows to use existing results, as opposed to running a simulation.
@@ -386,11 +386,12 @@ class Tester:
             raise ValueError(errMes)
 
 
-    def __getSimulationResults(self, data):
+    def __getSimulationResults(self, data, warnings):
         '''
         Get the simulation results.
 
         :param data: The class that contains the data structure for the simulation results.
+        :param warning: An empty list in which all warnings will be written.
 
         Extracts and returns the simulation results from the `*.mat` file as
         a list of dictionaries. Each element of the list contains a dictionary
@@ -415,7 +416,7 @@ class Tester:
         try:
             r=Reader(fulFilNam, "dymola") 
         except IOError as e:
-            sys.stdout.write("*** Warning: Failed to read %s generated by %s.\n" % 
+            warnings.append("Failed to read %s generated by %s.\n" % 
                              (fulFilNam, data.getScriptFile()))
             return ret
 
@@ -439,14 +440,14 @@ class Tester:
                     nPoi = min(self.__nPoi, len(val))
                     ti = [ tMin+float(i)/(nPoi-1)*dTim for i in range(nPoi) ]
                 except ZeroDivisionError as e:
-                    sys.stdout.write("*** Warning: When processing %s generated by %s, caught division by zero.\n" % 
-                                     (fulFilNam, data.getScriptFile()))
-                    sys.stdout.write("   len(val) = " + str(len(val)) + "\n")
-                    sys.stdout.write("   dTim     = " + str(dTim) + "\n")
+                    s = "When processing " + fulFilNam + " generated by " + data.getScriptFile() + ", caught division by zero.\n"
+                    s += "   len(val) = " + str(len(val)) + "\n"
+                    s += "   dTim     = " + str(dTim) + "\n"
+                    warnings.append(s)
                     break
 
                 except KeyError:
-                    sys.stdout.write("*** Warning: %s uses %s which does not exist in %s.\n" %
+                    warnings.append("%s uses %s which does not exist in %s.\n" %
                                      (data.getScriptFile(), var, data.getResultFile()))
                 else:
                     if (not foundData) and len(time) > 2:
@@ -471,20 +472,11 @@ class Tester:
         :param yNew: New simulation results.
         :param varNam: Variable name, used for reporting.
         :param filNam: File name, used for reporting.
-        :return: A list with ``False`` if the results are not equal, and he time 
-                 of the maximum error.
+        :return: A list with ``False`` if the results are not equal, and the time 
+                 of the maximum error, and a warning message or `None`
         '''
-        import sys
         import numpy as np
         from buildingspy.io.postprocess import Plotter
-
-
-        # Check arguments
-##        if len(tNew) != len(yNew):
-##            em = ("Argument tNew and yNew must have the same number of arguments.\n" 
-##                  "   For file " + filNam + ", variable " + varNam + ", "
-##                  "received len(tNew) = " + str(len(tNew)) + ", len(yNew) = " + str(len(yNew)) + ".")
-##            raise ValueError(em)
 
         timMaxErr = 0
 
@@ -500,13 +492,6 @@ class Tester:
         errRel=np.zeros(len(yInt))
         errFun=np.zeros(len(yInt))
 
-        # Make sure both time series have the same number of support points.
-        # This may not be the case if a parameter was changed to a variable or vice versa
-#        if len(yOld) != len(yInt):
-#            sys.stdout.write("*** Warning: %s : %s changed from %s to %s support points.\n" %
-#                             (filNam, varNam, str(len(yOld)) ,str(len(yInt))))
-#            return (False, tNew[0])
-            
         # Compute error for the variable with name varNam
         for i in range(len(yInt)):
             errAbs[i] = abs( yOld[i] - yInt[i] )
@@ -527,15 +512,16 @@ class Tester:
                     eMax = errFun[i]
                     iMax = i
             timMaxErr = tOld[iMax]
-            sys.stdout.write("*** Warning: %s : %s has absolute and relative error = %s  %s.\n" %
-                             (filNam, varNam, str(max(errAbs)) ,str(max(errRel))))
+            warning = filNam + ": " + varNam + " has absolute and relative error = " + \
+                ("%0.3e" % max(errAbs)) + ", " + ("%0.3e" % max(errRel)) + ".\n"
             if self.__isParameter(yInt):
-                sys.stdout.write("             %s is a parameter.\n" % varNam)
+                warning += "             %s is a parameter.\n" % varNam
             else:
-                sys.stdout.write("             Maximum error is at t = %s\n" % str(timMaxErr))
-            return (False, timMaxErr)
+                warning += "             Maximum error is at t = %s\n" % str(timMaxErr)
+
+            return (False, timMaxErr, warning)
         else:
-            return (True, timMaxErr)
+            return (True, timMaxErr, None)
 
 
     def __isParameter(self, dataSeries):
@@ -543,7 +529,8 @@ class Tester:
         '''
         import numpy as np
         if not (isinstance(dataSeries, np.ndarray) or isinstance(dataSeries, list)):
-            raise TypeError("Program error: dataSeries must be a numpy.ndarr or a list. Received type " + str(type(dataSeries)) + ".\n")
+            raise TypeError("Program error: dataSeries must be a numpy.ndarr or a list. Received type " \
+                                + str(type(dataSeries)) + ".\n")
         return (len(dataSeries) == 2)
 
     def __writeReferenceResults(self, refFilNam, yS):
@@ -702,25 +689,22 @@ class Tester:
                         else:
                             t=tS
 
-                    # Check arguments
-##                        if len(t) != len(pai[varNam]):
-##                            em = ("Argument tNew and yNew must have the same number of arguments.\n" 
-##                                  "   For variable " + varNam + ", "
-##                                  "received len(t) = " + str(len(t)) + ", len(pai[varNam]) = " + str(len(pai[varNam])) + ".")
-##                            raise ValueError(em)
-
-                        (res, timMaxErr) = self.__areResultsEqual(tR, yR[varNam], t, pai[varNam], varNam, matFilNam)
+                        (res, timMaxErr, warning) = self.__areResultsEqual(tR, yR[varNam], t, pai[varNam], varNam, matFilNam)
+                        if warning:
+                            self.__reporter.writeWarning(warning)
                         if not res:
                             foundError = True
                             timOfMaxErr[varNam] = timMaxErr
                     else:
                         # There is no old data series for this variable name
-                        print "*** Warning: Did not find variable ", varNam , " in old results."
+                        self.__reporter.writeWarning("Did not find variable ", varNam , " in old results.")
                         foundError = True
                         noOldResults.append(varNam)
 
-        # If we found an error, plot the results, and ask the user to accept or reject the new values
-        if foundError and not self.__batch:
+        # If the users selected "N" (to not accept any new results) in previous tests,
+        # or if the script is run in batch mode, then don't plot the results.
+        # If we found an error, plot the results, and ask the user to accept or reject the new values.
+        if foundError and (not self.__batch) and (not ans == "N"):
             print "   Acccept new file and update reference files? (Close plot window to continue.)"
             nPlo = len(yS)
             iPlo = 0
@@ -799,7 +783,10 @@ class Tester:
 
                 try:
                     # extract reference points from the ".mat" file corresponding to "filNam"
-                    yS=self.__getSimulationResults(data)
+                    warnings = []
+                    yS=self.__getSimulationResults(data, warnings)
+                    for entry in warnings:
+                        self.__reporter.writeWarning(entry)
                 except UnicodeDecodeError, e:
                     em = str(e) + "\n"
                     em += "Output file of " + data.getScriptFile() + " is excluded from unit tests.\n"
@@ -838,6 +825,8 @@ class Tester:
 
     # --------------------------
     def __checkSimulationError(self, errorFile):
+        import sys
+
         fil = open(errorFile, "r")
         i=0
         for lin in fil.readlines():
@@ -845,12 +834,22 @@ class Tester:
                         i=i+1
         fil.close() #Closes the file (read session)
         if (i>0):
-                print "*** Error: Unit tests had", i, "error(s)."
-                print "    Search 'unitTests.log' for 'false' to see details."
-                return 1
+                self.__reporter.writeError("Unit tests had" + str(i) + "error(s).\n" + \
+                                               "Search 'dymola.log' for 'false' to see details.\n")
+
+        self.__reporter.writeOutput("Script that runs unit tests had " + \
+                                        str(self.__reporter.getNumberOfWarnings()) + \
+                                        " warnings and " + \
+                                        str(self.__reporter.getNumberOfErrors()) + \
+                                        " errors.\n")
+        sys.stdout.write("See 'unitTests.log' for details.\n")
+        if self.__reporter.getNumberOfErrors() > 0:
+            return 1
+        if self.__reporter.getNumberOfWarnings() > 0:
+            return 2
         else:
-                print "Unit tests completed successfully."
-                return 0
+            self.__reporter.writeOutput("Unit tests completed successfully.\n")
+            return 0
 
 
     # --------------------------
@@ -923,7 +922,7 @@ class Tester:
                          + str(iPro+1) + " of " + str(self.__nPro) + "\n")
             runFil.write("// Do not edit.\n")
             runFil.write("openModel(\"package.mo\");\n")
-            runFil.write("Modelica.Utilities.Files.remove(\"unitTests.log\");\n")
+            runFil.write("Modelica.Utilities.Files.remove(\"dymola.log\");\n")
             # Write unit tests for this process
             pSta=int(round(iPro*nTes/self.__nPro))
             pEnd=int(round((iPro+1)*nTes/self.__nPro))
@@ -943,7 +942,7 @@ class Tester:
                     self.__removePlotCommands(mosFilNam)
                     nUniTes = nUniTes + 1
             runFil.write("// Save log file\n")
-            runFil.write("savelog(\"unitTests.log\");\n")
+            runFil.write("savelog(\"dymola.log\");\n")
             runFil.write("Modelica.Utilities.System.exit();\n")
             runFil.close()
         
@@ -1008,7 +1007,7 @@ class Tester:
         - creates run scripts that run all unit tests,
         - runs these unit tests,
         - collects the dymola log files from each process,
-        - writes the combined log file ``unitTests.log``
+        - writes the combined log file ``dymola.log``
           to the current directory, 
         - compares the results of the new simulations with
           reference results that are stored in ``Resources/ReferenceResults``,
@@ -1061,9 +1060,9 @@ class Tester:
 
 
         # Concatenate output files into one file
-        logFil=open('unitTests.log', 'w')
+        logFil=open('dymola.log', 'w')
         for d in self.__temDir:
-            temLogFilNam = os.path.join(d, 'Buildings', 'unitTests.log')
+            temLogFilNam = os.path.join(d, 'Buildings', 'dymola.log')
             if os.path.exists(temLogFilNam):
                 file=open(temLogFilNam,'r')
                 data=file.read()
@@ -1090,9 +1089,9 @@ class Tester:
 
         # Check for errors
         if retVal == 0:
-            retVal = self.__checkSimulationError("unitTests.log")
+            retVal = self.__checkSimulationError("dymola.log")
         else:
-            self.__checkSimulationError("unitTests.log")
+            self.__checkSimulationError("dymola.log")
 
         # Print list of files that may be excluded from unit tests
         if len(self.__excludeMos) > 0:
